# ftm-lakehouse

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.e2e.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: docker.yml  python.yml
contrib/keys/: auth.nginx.conf
docs/: api.md  architecture.md  cache.md  configuration.md  crawl.md  functionality.md  index.md  make.md  quickstart.md  rfc.md  usage.md
docs/deployment/: api.md  configuration.md  zfs.md
docs/overrides/partials/: copyright.html
docs/reference/: archive.md  cli.md  core.md  entities.md  io.md  lake.md  lakehouse.md  logic.md  mappings.md  model.md  operation.md  repository.md  storage.md
docs/usage/: archive.md  cli.md  configuration.md  entities.md  mappings.md
ftm_lakehouse/: __init__.py  catalog.py  cli.py  crawl.py  dataset.py  decorators.py  exceptions.py  io.py  lake.py  model.py  settings.py  util.py
ftm_lakehouse/api/: auth.py  dependencies.py  helpers.py  main.py  util.py
ftm_lakehouse/api/routes/: entities.py  journal.py  operations.py
ftm_lakehouse/cli/: __init__.py  archive.py  entities.py  io.py  mappings.py  operations.py  statements.py  zfs.py
ftm_lakehouse/conventions/: path.py  tag.py
ftm_lakehouse/core/: api.py  archive_url.py  config.py  decorators.py  freshness.py  mixins.py  settings.py  zfs.py
ftm_lakehouse/core/conventions/: path.py  tag.py
ftm_lakehouse/core/zfs/: __init__.py  agent.py  helpers.py
ftm_lakehouse/helpers/: __init__.py  dataset.py  file.py  serialization.py  statements.py
ftm_lakehouse/lake/: archive.py  base.py  crud.py  entities.py  fragments.py  jobs.py  mixins.py  statements.py
ftm_lakehouse/logic/: __init__.py  entities.py  parquet.py
ftm_lakehouse/logic/entities/: __init__.py  aggregate.py  buffer.py
ftm_lakehouse/model/: __init__.py  crud.py  dataset.py  file.py  job.py  mapping.py  statement.py
ftm_lakehouse/operation/: __init__.py  base.py  crawl.py  download.py  export.py  factories.py  maintenance.py  make.py  mapping.py  optimize.py  recreate.py
ftm_lakehouse/repository/: __init__.py  archive.py  base.py  diff.py  documents.py  entities.py  factories.py  job.py  mapping.py
ftm_lakehouse/repository/entities/: __init__.py  api.py  main.py
ftm_lakehouse/service/: archive.py
ftm_lakehouse/storage/: __init__.py  base.py  blob.py  journal.py  parquet.py  queue.py  tags.py  versions.py
ftm_lakehouse/storage/journal/: __init__.py  api.py  base.py  sql.py
tests/: conftest.py  duck.py  shared.py  test_adapter_fragments.py  test_api.py  test_archive.py  test_cli.py  test_config.py  test_crawl.py  test_dataset.py  test_duckdb_cursor.py  test_e2e_entities.py  test_e2e_workflows.py  test_helpers_file.py  test_helpers_statement.py  test_integration_api.py  test_integration_archive.py  test_integration_cli_import.py  test_integration_config.py  test_integration_crawl.py  test_integration_dataset.py  test_integration_entities.py  test_integration_mappings.py  test_integration_unlock.py  test_jobs.py  test_logic_parquet.py  test_model_crud.py  test_model_dataset.py  test_model_file.py  test_model_job.py  test_model_mapping.py  test_operation_crawl.py  test_operation_download.py  test_operation_exports.py  test_operation_maintenance.py  test_operation_mapping.py  test_operation_optimize.py  test_process.py  test_repository_archive.py  test_repository_document.py  (+24 more)
tests/fixtures/: mapping.yml
tests/fixtures/lake/external_dataset/: config.yml
tests/fixtures/lake/test_dataset/: config.yml
tests/fixtures/s3_lake/: config.yml
tests/fixtures/src/: companies.csv
