[project]
name = "ftm-lakehouse"
version = "0.0.4"
description = "Data standard, storage and retrieval for leaks and document collections"
authors = [
    { name = "Data and Research Center", email = "hi@dataresearchcenter.org" },
    { name = "Simon Wörpel", email = "simon.woerpel@pm.me" },
    { name = "Friedrich Lindenberg", email = "pudo@opensanctions.org" },
]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<4"
dependencies = [
    "ftmq[postgres] (>=4.0.2,<5.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "deltalake (>=1.1.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
]

[project.optional-dependencies]
api = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[project.scripts]
ftm-lakehouse = "ftm_lakehouse.cli:cli"

[project.urls]
Homepage = "https://docs.investigraph.dev/lib/ftm-lakehouse"
Documentation = "https://docs.investigraph.dev/lib/ftm-lakehouse"
Repository = "https://github.com/dataresearchcenter/ftm-lakehouse"
Issues = "https://github.com/dataresearchcenter/ftm-lakehouse/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = ">=4.1,<7.0"
pytest-env = "^1.1.1"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
moto = { extras = ["server"], version = "^5.1.4" }
pytest-asyncio = ">=0.23.8,<0.25.0"
rangehttpserver = "^1.4.0"
httpx = ">=0.27.2,<0.29.0"
mkdocs-material = "^9.5.49"
mkdocs-click = "^0.8.1"
mkdocs-autorefs = "^1.2.0"
mkdocstrings-python = "^1.12.2"
mkdocs-typer2 = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
LAKEHOUSE_URI = "tests/fixtures/lake"
AWS_SECRET_ACCESS_KEY = "ftm-lakehouse"
AWS_ACCESS_KEY_ID = "ftm-lakehouse"
DEBUG = 1
FSSPEC_S3_ENDPOINT_URL = "http://localhost:8888"
