[project]
name = "ftm-lakehouse"
version = "0.4.0"
description = "Data standard, storage and retrieval for structured and unstructured FollowTheMoney data"
authors = [
    { name = "Data and Research Center", email = "hi@dataresearchcenter.org" },
    { name = "Simon Wörpel", email = "simon.woerpel@pm.me" },
    { name = "Friedrich Lindenberg", email = "pudo@opensanctions.org" },
]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "ftmq[lake] (>=4.9.2,<5.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "followthemoney (>=4.9.2,<5.0.0)",
    "anystore @ git+https://github.com/dataresearchcenter/anystore.git",
    "httpx (>=0.28.1,<0.29.0)",
    "nomenklatura (<4.11)",
]

[project.optional-dependencies]
api = [
    "fastapi (>=0.138.2,<0.139.0)",
    "granian (>=2.7.7,<3.0.0)",
    "uvloop (>=0.22.1,<0.23.0)",
    "aiohttp (!=4.0.0a0,!=4.0.0a1)",
]
http = ["aiohttp (!=4.0.0a0,!=4.0.0a1)"]
s3 = ["s3fs (>2024.2.0)"]
gcs = ["gcsfs (>2024.2.0)"]
azure = ["adlfs"]

[project.scripts]
ftm-lakehouse = "ftm_lakehouse.cli:cli"

[project.urls]
Homepage = "https://openaleph.org/docs/lib/ftm-lakehouse"
Documentation = "https://openaleph.org/docs/lib/ftm-lakehouse"
Repository = "https://github.com/openaleph/ftm-lakehouse"
Issues = "https://github.com/openaleph/ftm-lakehouse/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = ">=4.1,<8.0"
pytest-env = "^1.1.1"
black = ">=23.11,<27.0"
isort = "^8.0.0"
mypy = "^2.1.0"
pre-commit = "^4.5.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
moto = { extras = ["server"], version = "^5.2.2" }
pytest-asyncio = ">=1.4.0,<1.5.0"
rangehttpserver = "^1.4.0"
mkdocstrings-python = "^2.0.1"
sqlalchemy = "^2.0.50"
uvicorn = "^0.49.0"
granian = {extras = ["reload"], version = "^2.7.9"}
griffe = "<3"
zensical = "^0.0.47"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",
    # Regression gate: naive / local-time datetimes leaking into statements
    # fail the suite instead of warning. pytz's UTC is a false positive in
    # rigour's identity check (it *is* UTC), so that exact variant stays
    # ignored – the dot anchor keeps fixed offsets like `UTC+02:00` failing.
    "error:datetime_iso expects UTC timezone:UserWarning",
    'ignore:datetime_iso expects UTC timezone, but got UTC\.:UserWarning',
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest_env]
DEBUG = 1
AWS_SECRET_ACCESS_KEY = "ftm-lakehouse"
AWS_ACCESS_KEY_ID = "ftm-lakehouse"
FSSPEC_S3_ENDPOINT_URL = "http://localhost:8888"
FTM_FRAGMENTS_URI = "sqlite:///:memory:"
# ``skip_if_set = true`` makes these defaults the CLI can override
# (``make test``'s docker run exports ``LAKEHOUSE_URI=http://...`` so
# the docker fixture variants pick ``ApiJournalStore`` via the global
# ``Settings.api_mode``).
LAKEHOUSE_URI = {value = "tests/fixtures/lake", skip_if_set = true}
LAKEHOUSE_JOURNAL_URI = {value = "sqlite:///:memory:", skip_if_set = true}
LAKEHOUSE_PUBLIC_URL_PREFIX = "https://data.example.org/{{ dataset }}"
LAKEHOUSE_API_KEY = "test-key"
LAKEHOUSE_API_SECRET = "test-secret"
